--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
 # Database configuration (Azure MySQL container)
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://57.158.26.198:3306/vault?useSSL=false&allowPublicKeyRetrieval=true}
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://57.158.26.198:3306/vault?useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=60000&socketTimeout=60000&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:1379}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# HikariCP connection pool settings
+spring.datasource.hikari.connection-timeout=60000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.pool-name=HikariPool-MovieVault
 
 # JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=update
