--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,33 @@
-# Database configuration (Azure MySQL container)
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://57.158.26.198:3306/vault?useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=60000&socketTimeout=60000&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8}
+# Database configuration (Azure MySQL container - increased timeouts for slow container)
+spring.datasource.url=${DATABASE_URL:jdbc:mysql://57.158.26.198:3306/vault?useSSL=false&allowPublicKeyRetrieval=true&connectTimeout=180000&socketTimeout=180000&autoReconnect=true&useUnicode=true&characterEncoding=UTF-8&tcpKeepAlive=true&allowLoadLocalInfile=false}
 spring.datasource.username=${DB_USERNAME:root}
 spring.datasource.password=${DB_PASSWORD:1379}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# HikariCP connection pool settings
-spring.datasource.hikari.connection-timeout=60000
-spring.datasource.hikari.idle-timeout=300000
-spring.datasource.hikari.max-lifetime=1200000
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=180000
+spring.datasource.hikari.validation-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
 spring.datasource.hikari.pool-name=HikariPool-MovieVault
+spring.datasource.hikari.connection-test-query=SELECT 1
+spring.datasource.hikari.leak-detection-threshold=300000
 
-# JPA / Hibernate
+# JPA / Hibernate (optimized for slow Azure MySQL container)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=false
+spring.jpa.properties.hibernate.connection.autocommit=false
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
+
+# Health checks and management for Azure container monitoring
+management.endpoints.web.exposure.include=health,info
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
 
 server.port=${PORT:8080}
 
